@@ -2,9 +2,9 @@
 
 <beans>
     <bean id="main" class="edu.mcw.rgd.Main">
-        <property name="version" value="Cellosaurus pipeline -- build Jul 06, 2023" />
+        <property name="version" value="Cellosaurus pipeline -- build Jul 10, 2023" />
         <property name="sourcePipeline" value="CELLOSAURUS" />
-        <property name="oboFile" value="ftp://ftp.expasy.org/databases/cellosaurus/cellosaurus.obo"/>
+        <property name="oboFile" value="https://ftp.expasy.org/databases/cellosaurus/cellosaurus.obo"/>
         <property name="parser" ref="parser"/>
     </bean>
 
